# python-playground

./: .gitignore  README.md
Correlation/: Correlation.ipynb  Pipfile  README.md  corr.py  pandamonium.py
Data-Classes/: data_classes.py
Decorators/: README.md  decorators.py
Imaging/: Pipfile  README.md  cropify.py
OOP/: mixin.py  mixins.py
Taxa-Desemprego/: Pipfile  README.md  taxa_desemprego_portugal.ipynb
altair-1d-gantt-chart/: Pipfile  chart.ipynb
change-color-png/: Pipfile  README.md  change_color.ipynb
check-if-deps-exist-pipfile-lock/: Pipfile  README.md  script.py
check-python-implementation/: README.md  cpython.yml  script.py
color-difference/: Pipfile  README.md  colorio_example.py  scikit_image_example.py
extract-images-pdf/: Pipfile  README.md  extract_img.py
find-closest-color/: Pipfile  README.md  dev.py
gen-requirements-for-date/: Pipfile  README.md  script.py
get-releases-for-package/: Pipfile  README.md  script.py
gh-alerts/: Pipfile  README.md  alerts.py
gh-topics/: Pipfile  README.md  cli.py  eda.ipynb  script.py
hypermodern-python/: .editorconfig  README.md  noxfile.py  pyproject.toml
hypermodern-python/src/hypermodern_python/: console.py
hypermodern-python/tests/: __init__.py
iban/: README.md  script.py
kmeans-colors/: Pipfile  README.md  script.py
merge-pdfs/: Pipfile  README.md  script.py
pybites/: README.md
pytest-assertion-rewrite/: .gitignore  01.py  NOTES.md  README.md  requirements.txt  test.py
pytree/: README.md  setup.py
qr-codes/: .gitignore  01.py  NOTES.md  README.md  requirements.txt
(+62 files in other folders)
